# template_project_python

./: README.md
epic_project1/docker/: Dockerfile  docker-compose.yml
epic_project1/scripts/: dev.sh  prod.sh
epic_project1/src/epic_project1_main/: pyproject.toml
epic_project1/src/epic_project1_main/epic_project1/main/: __main__.py  main.py
epic_project1/src/epic_project1_part1/: pyproject.toml
epic_project1/src/epic_project1_part1/epic_project1/part1/: module.py
epic_project1/src/epic_project1_part2/: pyproject.toml
epic_project1/src/epic_project1_part2/epic_project1/part2/: module.py
epic_project2/: Readme.md
epic_project2/docker/: docker-compose.dev.yml
epic_project2/scripts/: dev_local.sh
epic_project2/src/epic_project1_domain/: pyproject.toml
epic_project2/src/epic_project1_domain/epic_project1/domain/: __init__.py  entities.py  service.py
epic_project2/src/epic_project1_main/: pyproject.toml
epic_project2/src/epic_project1_main/epic_project1/main/: deps.py  main.py
epic_project2/src/epic_project1_part1/: pyproject.toml
epic_project2/src/epic_project1_part1/epic_project1/part1/: module.py
epic_project2/src/epic_project1_part2/: pyproject.toml
epic_project2/src/epic_project1_part2/epic_project1/part2/: module.py
