[tool.poetry]
name = "epic-project1-part1"
version = "0.1.0"
description = ""
authors = ["Pablo Daniel Rey <pablodanielrey@gmail.com>"]
readme = "README.md"
packages = [{include = "epic_project1"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
