[tool.poetry]
name = "epic-project1-part2"
version = "0.1.0"
description = ""
authors = ["Pablo Daniel Rey <pablodanielrey@gmail.com>"]
readme = "README.md"
packages = [{include = "epic_project1"}]

[tool.poetry.dependencies]
python = "^3.10"
epic_project1_domain = { path = "../epic_project1_domain/", develop=true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
